# geoservice

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASENOTES.md  SECURITY.md  architektur.md  barrierefreiheit.py  dev.py  env.json.example  fixed_dependencies.json  interfaces.json  pyproject.toml  requirements.txt  run.sh
datajobs/basicetl/: Dockerfile
geoservice/: __init__.py  application.py  cli.py  constants.py  exceptions.py  logging.py
geoservice/controller/: __init__.py  api.py  frontend.py
geoservice/controller/data_sources/: __init__.py  data_source__base.py  data_source__consulates.py  data_source__gadm.py  data_source__hillshade.py  data_source__landscan.py  data_source__metadata.py  data_source__naturalearth.py  data_source__nomenclature.py  data_source__populated_places.py  data_source__population.py  data_source__vg250.py  data_source__wahlkreise.py
geoservice/model/: __init__.py  base.py  geoobject.py
geoservice/model/migrations/: env.py
geoservice/schemas/: geoobject_schema.py  hillshade_schema.py  landscan_schema.py  metadata_schema.py  population_schema.py  vg250_schema.py
geoservice/static/css/: simple.css
geoservice/static/swagger_ui/: swagger-initializer.js  swagger-ui.css
geoservice/templates/: base.html  codeblock.html  index.html  swagger_ui.html
geoservice/utils/: minio.py  shell_utils.py
geoservice_ui/: package-lock.json  package.json
geoservice_ui/src/routes/: +layout.svelte  +page.svelte  Map.svelte
headless_qgis/: Dockerfile
headless_qgis/example/landscan/: README.md  (+1 more)
headless_qgis/headless_qgis/: app.py
resources/nomenclature/: data.json  iso_fixture_adm0.json  subdivision_hierarchy.csv
tests/: conftest.py  test_controller.py  test_natural_earth.py
(+21 files in other folders)
